--- a/res/layout/item_todolist.xml
+++ b/res/layout/item_todolist.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.sunny.todolist.ToDoListItemView 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    android:scrollbars="vertical"
-    android:textColor="@color/notepad_text"
-    android:fadingEdge="vertical" />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+
+    <TextView
+        android:id="@+id/rowDate"
+        android:background="@color/notepad_paper"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:padding="10dp"
+        android:scrollbars="vertical"
+        android:fadingEdge="vertical"
+        android:textColor="#F000"
+        android:layout_alignParentRight="true" />
+
+    <com.sunny.todolist.ToDoListItemView
+        android:id="@+id/row"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="10dp"
+        android:fadingEdge="vertical"
+        android:scrollbars="vertical"
+        android:textColor="@color/notepad_text"
+        android:layout_toLeftOf="@id/rowDate" />
+
+</RelativeLayout>
